@@ -82,6 +82,8 @@ COMMON_SDCC = \
   _strcat.c \
   _strchr.c \
   _strcspn.c \
+  strdup.c \
+  strndup.c \
   _strncat.c \
   _strncmp.c \
   strxfrm.c \
